--- a/themes/shiro/assets/src/sass/css/scss/objects/_nav.scss
+++ b/themes/shiro/assets/src/sass/css/scss/objects/_nav.scss
@@ -160,11 +160,10 @@
           margin-right: 0;
           margin-bottom: 0;
           margin-left: 0;
-          border-bottom: 1px solid $color-dark-blue;
 
           a {
-            padding: 1rem;
-            display: block;
+            margin: 0.75rem 1rem;
+            display: inline-block;
           }
         }
       }
